@startuml SolidFI_Level1

legend top right
  SolidFI Level 1
  Scott Tringali
end legend

' !include L0.puml

top to bottom direction

together {
  interface Inverter<T, U> {}
  interface Provider<T, U> {}
}

together {
  interface Converter<T, U> {
    + accepts(input: T) : boolean
    + rejects(input: T) : boolean
    + fetch() : U
  }

  interface Transform<T> {
    + accepts(input: T) : boolean
    + rejects(input: T) : boolean
    + apply() : T
  }

  class Chain<T, U> {
    -- inherited --
    + accepts(input: T) : boolean
    + rejects(input: T) : boolean
    + fetch() : U
    -- own --
    + resolve() : U
    + add(converter: Converter<T, U>) : void
    + remove(index: int) : void
    + replace(index: int, converter: Converter<T, U>) : void
    .. note ..
    T→U only; internal links are impl detail.
    resolve() is the friendly alias for fetch().
  }

  class Pipeline<T> {
    -- inherited --
    + accepts(input: T) : boolean
    + rejects(input: T) : boolean
    + apply() : T
    -- own --
    + run() : T
    + add(transform: Transform<T>) : void
    + remove(index: int) : void
    + replace(index: int, transform: Transform<T>) : void
    .. note ..
    run() is the friendly alias for apply().
  }
}

Converter <|.. Chain : "implements\nConverter<T,U>"
Transform <|.. Pipeline : "implements\nTransform<T>"

Converter <|-- Inverter
Converter <|-- Provider

Converter --o Chain : contains
Transform --o Pipeline : contains

@enduml